# LINZA-MCP

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LINZA_TOOL_CATALOG.md  LINZA_TOOL_GUIDE.md  MANIFEST.in  README.md  README_EN.md  SECURITY.md  glama.json  pyproject.toml  server.json  server.py  test_agent_workspace.py  test_artifacts.py  test_draft_map.py  test_index_graph.py  test_operator_surface.py  test_operator_tools.py  test_review_queue.py  test_support.py  test_tag_vocabulary.py
.github/workflows/: ci.yml
agent-pack/: README.md
agent-pack/skills/linza-operator/: SKILL.md
agent-pack/skills/linza-operator/references/: safety-policy.md  tool-audience.md  workflows.md
examples/: README.md
examples/expected/: safety-checks.md
examples/sample-vault/Operations/: Agent Safety Rule.md
examples/sample-vault/Product/: 2026-05-03 Action.md  Project Overview.md
examples/sample-vault/Research/: Retrieval Quality Note.md  Source Policy.md
linza_mcp/: __init__.py  artifacts.py  calibr.py  chunker.py  cli.py  compat.py  core.py  diagnostics.py  domains.py  draft_map.py  embed.py  events.py  graph.py  indexing.py  operator.py  properties.py  review_queue.py  roles.py  self_review.py  server.py  storage.py  tags.py  utils.py  workflows.py
scripts/: README.md  demo_core.ps1  linza_doctor.py  smoke_copy_vault.py  smoke_mcp_tools.py
tests/: __init__.py  test_agent_workspace.py  test_draft_map.py  test_index_graph.py  test_operator_surface.py  test_operator_tools.py  test_review_queue.py  test_tag_vocabulary.py
tests/fixtures/linza-sample-pack/: README.md
tests/fixtures/linza-sample-pack/artifacts/: agent-trace.json  browser-research.md  chat-log.md
tests/fixtures/linza-sample-pack/sample-vault/Operations/: Review Workflow.md
tests/fixtures/linza-sample-pack/sample-vault/Product/: 2026-05-01 Problem.md  2026-05-02 Decision.md  2026-05-04 Result.md
